* modified sfsuwrite for consistency with sfsuread
* user/chen: new contributor (Zhonghuan Chen)
* sffoldplot: build a seismic fold map
* tkvpconvert: GUI for vpconvert
* user/rweiss: new contributor (Robin Weiss)
* sfewefd2d_gpu: 2d FDTD wave equation with GPU
* sfewefd3d_gpu: 3d FDTD wave equation with GPU
* user/aklokov: new contributor (Alexander Klokov)

===Bug fixes===

In the reproducible documents collection:

In documentation:

* Included previously undocumented parameters (dash,plotcol,plotfat)
  in stdplot.
* Fixed selfdoc for Python scripts

In APIs:

In the Python package:
* Hires Bounding Box detection in Mathematica plots
* Location of config.py in configure.py 
* Prevent segfault when the input file is closed prematurely.

In programs:
* Fixed sfpen (via dovplot) bug
* Fixed sflosignoi bug
* Fixed sfdots axis-positioning bug
* Fixed sfmath crash when datapath was specified
* Fixed handling of infinite values in sfgraph
* Fixed handling of different output size in sfiwarp
* Fixed sftransp off-core I/O bug 

In the build system:
* Fixed bug that resulted in BLAS/ATLAS-based programs to not install in Fedora
* Eliminated hardcoded paths that made it impossible to package m8r
* Workaround for SCons bug #1488 
* Fixed MacPorts and Fink path detection for compilers other than gcc
  on Mac
* Fixed bug preventing spaces in ./configure arguments
* Fixed cfortran.h dependency in api/f77

===Changes in defaults===

==Release 1.2 (2011-07-14)==

===Additions and enhancements===

To the reproducible documents collection:

* swag/anisogath: Angle gathers in wave-equation imaging for
  transversely isotropic media (Alkhalifah and Fomel) 
* jsg/agath: Theory of 3-D angle gathers in wave-equation seismic
  imaging (Fomel)
* cwp/pept2011MicroearthquakeMonitoring: Micro-earthquake monitoring
  with sparsely-sampled data (Sava)
* jsg/vc3: Azimuthally anisotropic 3D velocity continuation (Burnett
  and Fomel)
* milano/taupvel: Velocity-independent tau-p moveout in a